# today_mini_task

./: README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  scheduler.rs  task.rs
src/routes/: +page.svelte
